src/objects/Incentive_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Retains_RECs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency Retains RECs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>American_Made_Adder_W__c</fullName>
        <label>American Made Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>American_Made_Cap_kW__c</fullName>
        <label>American Made Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumption_Adjustment_Type__c</fullName>
        <label>Consumption Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Count Capped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumption_Calculation_Adj_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumption Calculation Adj. Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Capped_by_Annual_Tax_Obligation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Capped by Annual Tax Obligation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <inlineHelpText>This is what the customer will see on the Proposal/Quote input page.</inlineHelpText>
        <label>Customer Description</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Receives_RECs_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Receives RECs Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depreciation_Basis_Rate__c</fullName>
        <label>Depreciation Basis Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_1__c</fullName>
        <label>Depreciation Year 1 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_2__c</fullName>
        <label>Depreciation Year 2 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depreciation_Year_3__c</fullName>
        <label>Depreciation Year 3 (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Cost_Basis__c</fullName>
        <label>Eligible Cost Basis</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total System Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net of Federal Tax Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net of State Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Lease Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Lease Down Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_County__c</fullName>
        <inlineHelpText>Example: Chester County, PA; Delaware County, PA;</inlineHelpText>
        <label>Eligible County</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Financing_Type__c</fullName>
        <label>Eligible Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Sector__c</fullName>
        <label>Eligible Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_State__c</fullName>
        <label>Eligible State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Payment__c</fullName>
        <label>Estimated Days to Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Month__c</fullName>
        <label>Estimated Payment Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Year_Offset__c</fullName>
        <label>Estimated Payment Year Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_Tier_1_Amount__c</fullName>
        <label>FIT Tier 1 Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FIT_Tier_1_Max_Sys_Size_kW__c</fullName>
        <label>FIT Tier 1 Max Sys Size kW</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_Tier_2_Amount__c</fullName>
        <label>FIT Tier 2 Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FIT_Tier_2_Max_Sys_Size_kW__c</fullName>
        <label>FIT Tier 2 Max Sys Size kW</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flat_Rebate_Amount__c</fullName>
        <label>Flat Rebate Amount ($)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historic_Trust_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historic Trust Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementing_Sector__c</fullName>
        <label>Implementing Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incentive_Recipient__c</fullName>
        <label>Incentive Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>Property Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Rebate_Amount__c</fullName>
        <label>Max Rebate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowable_Tax_Credit__c</fullName>
        <label>Maximum Allowable Tax Credit ($)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Azimuth__c</fullName>
        <label>Maximum Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Eligible_System_Size_kW__c</fullName>
        <label>Maximum Eligible System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Proportion_of_Consumption__c</fullName>
        <label>Maximum Proportion of Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Proportion_of_Total_Cost__c</fullName>
        <label>Maximum Proportion of Total Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Tilt__c</fullName>
        <label>Maximum Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Azimuth__c</fullName>
        <label>Minimum Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Eligible_System_Size_kW__c</fullName>
        <label>Minimum Eligible System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Standard_TSRF__c</fullName>
        <label>Minimum Standard TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Tilt__c</fullName>
        <label>Minimum Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mod_Home_Value_Mod_Income_Adder_W__c</fullName>
        <label>Mod Home Value/Mod Income Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mod_Home_Value_Mod_Income_Cap_kW__c</fullName>
        <label>Mod Home Value/Mod Income Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_per_Payment__c</fullName>
        <label>Months per Payment</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Adder_W__c</fullName>
        <label>Natural Disaster Adder ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Cap_kW__c</fullName>
        <label>Natural Disaster Cap (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Utility_Companies__c</fullName>
        <label>Number of Utility Companies</label>
        <summaryForeignKey>Incentive_Utility_Junction__c.Incentive_Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PBI_Amount_Tier_1_C_kwh__c</fullName>
        <label>PBI Amount Tier 1 C kwh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI_Amount_Tier_2_C_kwh__c</fullName>
        <label>PBI Amount Tier 2 C kwh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI_Amount__c</fullName>
        <label>PBI Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PBI_Tier_1_Max_Sys_Size_kw__c</fullName>
        <label>PBI Tier 1 Max Sys Size kw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI_Tier_2_Max_Sys_Size_kw__c</fullName>
        <label>PBI Tier 2 Max Sys Size kw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Type__c</fullName>
        <label>Payment Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Receipt_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Receipt Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Residence Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revocable_Trust_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revocable Trust Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAC_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAC Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_Panel_Capped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Size Panel Capped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Size_Units__c</fullName>
        <label>System Size Units</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment_Type__c</fullName>
        <label>TSRF Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSRF Derate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Rate__c</fullName>
        <label>Tax Credit Rate (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Incentive_Rate_W__c</fullName>
        <label>Tier 1 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Maximum_System_Size_kW__c</fullName>
        <label>Tier 1 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Incentive_Rate_W__c</fullName>
        <label>Tier 2 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Maximum_System_Size_kW__c</fullName>
        <label>Tier 2 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Pricing_Type__c</fullName>
        <label>Tier Pricing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Segmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Segmented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEFIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Matching_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility Company Matching Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Incentive Offer</label>
    <nameField>
        <label>Incentive Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Offers</pluralLabel>
    <recordTypes>
        <fullName>Depreciation</fullName>
        <active>true</active>
        <description>Depreciation</description>
        <label>Depreciation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feed_In_Tariff</fullName>
        <active>true</active>
        <label>Feed In Tariff</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBI</fullName>
        <active>true</active>
        <description>Performance Based Incentive</description>
        <label>PBI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate</fullName>
        <active>true</active>
        <description>Dollar Rebate</description>
        <label>Rebate ($)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_W</fullName>
        <active>true</active>
        <description>Dollar per Watt Rebate</description>
        <label>Rebate ($/W)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Credit</fullName>
        <active>true</active>
        <description>Tax Credit</description>
        <label>Tax Credit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_Utility_Companies</fullName>
        <active>true</active>
        <errorConditionFormula>Number_of_Utility_Companies__c &gt; 0 &amp;&amp;  NOT(Utility_Company_Matching_Required__c)</errorConditionFormula>
        <errorDisplayField>Utility_Company_Matching_Required__c</errorDisplayField>
        <errorMessage>This Incentive Offer must have this field checked if you are going to add Utility Company requirements: [Utility Company Matching Required]</errorMessage>
    </validationRules>
</CustomObject>